--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "framer-motion": "^3.2.1",
+    "identicon.js": "^2.3.3",
+    "jssha": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
@@ -39,10 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "axios": "^0.21.1",
-    "react-router-dom": "^5.2.0"
   },
   "proxy": "http://localhost:8080"
 }
